Use Integer.valueOf instead of deprecated Integer(int) constructor
Change-Id: Ic510be94fcd68159a1ee2104e01d9aec30bfc781
Signed-off-by: David Pursehouse <dpursehouse@collab.net>